localized time stamps

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-LOCALDB_URL = mysql://root:rootroot@localhost:3306/chatwallet_db
+LOCALDB_URL = mysql://root:ElsaRoseyButterScotch@localhost:3306/chatwallet_db
 SECRET = SECRET
